vlib/v/checker/tests/array_cmp_err.out
vlib/v/checker/tests/array_cmp_err.vv:2:23: error: only `==` and `!=` are defined on arrays
    1 | fn main() {
    2 |     println([2, 3, 4, 6] < [2, 5])
      |                          ^
    3 |     println([2, 3, 4, 6] > [2, 5])
    4 |     println([2, 3, 1, 6] >= [3, 5, 7])
vlib/v/checker/tests/array_cmp_err.vv:3:23: error: only `==` and `!=` are defined on arrays
    1 | fn main() {
    2 |     println([2, 3, 4, 6] < [2, 5])
    3 |     println([2, 3, 4, 6] > [2, 5])
      |                          ^
    4 |     println([2, 3, 1, 6] >= [3, 5, 7])
    5 |     println([2, 3, 6, 8] <= [2, 5, 8, 9])
vlib/v/checker/tests/array_cmp_err.vv:4:23: error: only `==` and `!=` are defined on arrays
    2 |     println([2, 3, 4, 6] < [2, 5])
    3 |     println([2, 3, 4, 6] > [2, 5])
    4 |     println([2, 3, 1, 6] >= [3, 5, 7])
      |                          ~~
    5 |     println([2, 3, 6, 8] <= [2, 5, 8, 9])
    6 | }
vlib/v/checker/tests/array_cmp_err.vv:5:23: error: only `==` and `!=` are defined on arrays
    3 |     println([2, 3, 4, 6] > [2, 5])
    4 |     println([2, 3, 1, 6] >= [3, 5, 7])
    5 |     println([2, 3, 6, 8] <= [2, 5, 8, 9])
      |                          ~~
    6 | }
