vlib/v/checker/tests/array_cmp_err.vv
fn main() {
	println([2, 3, 4, 6] < [2, 5])
	println([2, 3, 4, 6] > [2, 5])
	println([2, 3, 1, 6] >= [3, 5, 7])
	println([2, 3, 6, 8] <= [2, 5, 8, 9])
}
